--- a/src/main/webapp/pages/captureVideoWid/page.min.html
+++ b/src/main/webapp/pages/captureVideoWid/page.min.html
@@ -25,18 +25,18 @@ Application.$controller("captureVideoWidPageController", ["$scope", function ($s
 
 </script>
 <script id="captureVideoWid.variables.json">
-var _captureVideoWidPage_Variables_ ={};
+var _captureVideoWidPage_Variables_ ={}
 </script>
 <script id="captureVideoWid.html" type="text/ng-template">
-<wm-page data-ng-controller="captureVideoWidPageController" name="page1">
+<wm-page name="page1" data-ng-controller="captureVideoWidPageController">
     <wm-left-panel content="leftnav" name="left_panel1"></wm-left-panel>
-    <wm-mobile-navbar name="mobile_navbar1" title="TAKE VIDEO" backbutton="false"></wm-mobile-navbar>
+    <wm-mobile-navbar title="TAKE VIDEO" name="mobile_navbar1" backbutton="false"></wm-mobile-navbar>
     <wm-content name="content1">
-        <wm-page-content columnwidth="12" name="page_content1">
-            <wm-container horizontalalign="center" name="container1">
-                <wm-camera title="Take a Video" name="camera1" iconclass="glyphicon glyphicon-facetime-video"></wm-camera>
+        <wm-page-content name="page_content1" columnwidth="12">
+            <wm-container name="container1" horizontalalign="center">
+                <wm-camera title="Take a Video" name="camera1" iconclass="glyphicon glyphicon-facetime-video" capturetype="VIDEO"></wm-camera>
             </wm-container>
-            <wm-video controls="controls" videopreload="none" name="video1" width="100%" mp4format="bind:Widgets.camera1.datavalue"></wm-video>
+            <wm-video width="100%" name="video1" controls="controls" mp4format="bind:Widgets.camera1.datavalue" videopreload="none"></wm-video>
         </wm-page-content>
     </wm-content>
 </wm-page>
