--- a/src/main/webapp/pages/CameraPictureVar/page.min.html
+++ b/src/main/webapp/pages/CameraPictureVar/page.min.html
@@ -2,63 +2,42 @@
 
 </style>
 <script id="CameraPictureVar.js">
-Application.$controller("CameraPictureVarPageController", ["$scope", function ($scope) {
+Application.$controller("CameraPictureVarPageController", ["$scope", function($scope) {
     "use strict";
 
     /* perform any action with the variables inside this block(on-page-load) */
-    $scope.onPageVariablesReady = function () {
+    $scope.onPageVariablesReady = function() {
         /*
          * variables can be accessed through '$scope.Variables' property here
          * e.g. $scope.Variables.staticVariable1.getData()
          */
     };
-    
+
     /* perform any action with widgets inside this block */
-    $scope.onPageReady = function () {
+    $scope.onPageReady = function() {
         /*
          * widgets can be accessed through '$scope.Widgets' property here
          * e.g. $scope.Widgets.byId(), $scope.Widgets.byName()or access widgets by $scope.Widgets.widgetName
          */
     };
 
-}]);
 
+}]);
 </script>
 <script id="CameraPictureVar.variables.json">
-var _CameraPictureVarPage_Variables_ ={
-	"takePicture": {
-		"owner": "Page",
-		"dataSet": {
-			"imagePath": "resources/images/imagelists/default-image.png"
-		},
-		"dataBinding": {},
-		"service": "camera",
-		"operation": "captureImage",
-		"startUpdate": false,
-		"imageQuality": 80,
-		"imageEncodingType": "0",
-		"allowImageEdit": false,
-		"correctOrientation": true,
-		"saveToPhotoAlbum": false,
-		"geolocationHighAccuracy": true,
-		"geolocationMaximumAge": 3,
-		"geolocationTimeout": 5,
-		"vibrationtime": 2,
-		"category": "wm.DeviceVariable",
-		"_id": "wm-takePicture-wm.DeviceVariable-1443149724998"
-	}
-}
+var _CameraPictureVarPage_Variables_ ={}
 </script>
 <script id="CameraPictureVar.html" type="text/ng-template">
-<wm-page data-ng-controller="CameraPictureVarPageController" name="page1">
-    <wm-left-panel content="leftnav" columnwidth="2" name="left_panel1"></wm-left-panel>
-    <wm-mobile-navbar name="mobile_navbar1" title="PICTURE VAR" backbutton="false"></wm-mobile-navbar>
+<wm-page name="page1" data-ng-controller="CameraPictureVarPageController">
+    <wm-left-panel content="leftnav" name="left_panel1" columnwidth="2"></wm-left-panel>
+    <wm-mobile-navbar title="PICTURE VAR" name="mobile_navbar1" backbutton="false"></wm-mobile-navbar>
     <wm-content name="content1">
-        <wm-page-content columnwidth="12" name="page_content1">
+        <wm-page-content name="page_content1" columnwidth="12">
             <wm-container name="container1" horizontalalign="center">
-                <wm-button class="btn-default" caption="Click Me to take a picture" type="button" name="button1" height="38" on-click="takePicture"></wm-button>
+                <wm-button class="btn-default" type="button" name="button1" caption="Click Me to take a picture" height="38" on-click="takePicture"></wm-button>
             </wm-container>
-            <wm-picture name="picture1" width="100%" picturesource="bind:Variables.takePicture.dataSet.imagePath"></wm-picture>
+            <wm-picture width="100%" name="picture1" picturesource="bind:Variables.takePicture.dataSet.imagePath"></wm-picture>
+            <wm-fileupload name="fileupload1" operation="uploadFile" service="FileService" on-success="fileupload1Success($event, $scope)"></wm-fileupload>
         </wm-page-content>
     </wm-content>
 </wm-page>
