--- a/src/main/webapp/pages/CaptureVideoVar/page.min.html
+++ b/src/main/webapp/pages/CaptureVideoVar/page.min.html
@@ -26,27 +26,28 @@ Application.$controller("CaptureVideoVarPageController", ["$scope", function ($s
 </script>
 <script id="CaptureVideoVar.variables.json">
 var _CaptureVideoVarPage_Variables_ ={
-	"takeVideo": {
-		"owner": "Page",
-		"dataSet": {
-			"videoPath": ""
-		},
-		"dataBinding": {},
-		"service": "camera",
-		"operation": "captureVideo",
-		"startUpdate": false,
-		"imageQuality": 80,
-		"imageEncodingType": "0",
-		"allowImageEdit": false,
-		"correctOrientation": true,
-		"saveToPhotoAlbum": false,
-		"geolocationHighAccuracy": true,
-		"geolocationMaximumAge": 3,
-		"geolocationTimeout": 5,
-		"vibrationtime": 2,
-		"category": "wm.DeviceVariable",
-		"_id": "wm-takeVideo-wm.DeviceVariable-1443149848940"
-	}
+  "takeVideo" : {
+    "geolocationTimeout" : 5,
+    "saveToPhotoAlbum" : false,
+    "geolocationMaximumAge" : 3,
+    "startUpdate" : false,
+    "correctOrientation" : true,
+    "dataSet" : {
+      "videoPath" : ""
+    },
+    "imageEncodingType" : "0",
+    "operation" : "captureVideo",
+    "category" : "wm.DeviceVariable",
+    "vibrationtime" : 2,
+    "allowImageEdit" : false,
+    "geolocationHighAccuracy" : true,
+    "dataBinding" : { },
+    "_id" : "wm-takeVideo-wm.DeviceVariable-1443149848940",
+    "name" : "takeVideo",
+    "service" : "camera",
+    "owner" : "Page",
+    "imageQuality" : 80
+  }
 }
 </script>
 <script id="CaptureVideoVar.html" type="text/ng-template">
