--- a/src/main/webapp/pages/GeoLocation/page.min.html
+++ b/src/main/webapp/pages/GeoLocation/page.min.html
@@ -28,36 +28,37 @@ Application.$controller("GeoLocationPageController", ["$scope", function ($scope
 </script>
 <script id="GeoLocation.variables.json">
 var _GeoLocationPage_Variables_ ={
-	"myLocation": {
-		"owner": "Page",
-		"dataSet": {
-			"coords": {
-				"latitude": 0,
-				"longitude": 0,
-				"altitude": 0,
-				"accuracy": 0,
-				"altitudeAccuracy": 0,
-				"heading": 0,
-				"speed": 0
-			},
-			"timestamp": 0
-		},
-		"dataBinding": {},
-		"service": "device",
-		"operation": "getCurrentGeoPosition",
-		"startUpdate": true,
-		"imageQuality": 80,
-		"imageEncodingType": "0",
-		"allowImageEdit": false,
-		"correctOrientation": true,
-		"saveToPhotoAlbum": false,
-		"geolocationHighAccuracy": true,
-		"geolocationMaximumAge": 3,
-		"geolocationTimeout": 5,
-		"vibrationtime": 2,
-		"category": "wm.DeviceVariable",
-		"_id": "wm-myLocation-wm.DeviceVariable-1443149409583"
-	}
+  "myLocation" : {
+    "geolocationTimeout" : 5,
+    "saveToPhotoAlbum" : false,
+    "geolocationMaximumAge" : 3,
+    "startUpdate" : true,
+    "correctOrientation" : true,
+    "dataSet" : {
+      "timestamp" : 0,
+      "coords" : {
+        "speed" : 0,
+        "altitude" : 0,
+        "longitude" : 0,
+        "latitude" : 0,
+        "accuracy" : 0,
+        "altitudeAccuracy" : 0,
+        "heading" : 0
+      }
+    },
+    "imageEncodingType" : "0",
+    "operation" : "getCurrentGeoPosition",
+    "category" : "wm.DeviceVariable",
+    "vibrationtime" : 2,
+    "allowImageEdit" : false,
+    "geolocationHighAccuracy" : true,
+    "dataBinding" : { },
+    "_id" : "wm-myLocation-wm.DeviceVariable-1443149409583",
+    "name" : "myLocation",
+    "service" : "device",
+    "owner" : "Page",
+    "imageQuality" : 80
+  }
 }
 </script>
 <script id="GeoLocation.html" type="text/ng-template">
