--- a/src/main/webapp/pages/scanBarcode/page.min.html
+++ b/src/main/webapp/pages/scanBarcode/page.min.html
@@ -26,29 +26,30 @@ Application.$controller("scanBarcodePageController", ["$scope", function ($scope
 </script>
 <script id="scanBarcode.variables.json">
 var _scanBarcodePage_Variables_ ={
-	"scanBarCode": {
-		"owner": "Page",
-		"dataSet": {
-			"text": "BAR CODE",
-			"format": "TEXT",
-			"cancelled": false
-		},
-		"dataBinding": {},
-		"service": "scan",
-		"operation": "scanBarCode",
-		"startUpdate": false,
-		"imageQuality": 80,
-		"imageEncodingType": "0",
-		"allowImageEdit": false,
-		"correctOrientation": true,
-		"saveToPhotoAlbum": false,
-		"geolocationHighAccuracy": true,
-		"geolocationMaximumAge": 3,
-		"geolocationTimeout": 5,
-		"vibrationtime": 2,
-		"category": "wm.DeviceVariable",
-		"_id": "wm-scanBarCode-wm.DeviceVariable-1443150750979"
-	}
+  "scanBarCode" : {
+    "geolocationTimeout" : 5,
+    "saveToPhotoAlbum" : false,
+    "geolocationMaximumAge" : 3,
+    "startUpdate" : false,
+    "correctOrientation" : true,
+    "dataSet" : {
+      "text" : "BAR CODE",
+      "cancelled" : false,
+      "format" : "TEXT"
+    },
+    "imageEncodingType" : "0",
+    "operation" : "scanBarCode",
+    "category" : "wm.DeviceVariable",
+    "vibrationtime" : 2,
+    "allowImageEdit" : false,
+    "geolocationHighAccuracy" : true,
+    "dataBinding" : { },
+    "_id" : "wm-scanBarCode-wm.DeviceVariable-1443150750979",
+    "name" : "scanBarCode",
+    "service" : "scan",
+    "owner" : "Page",
+    "imageQuality" : 80
+  }
 }
 </script>
 <script id="scanBarcode.html" type="text/ng-template">
